TS-189: TS should not send Transfer-Encoding header for responses with an empty body Fix to avoid chunked headers to client when response code precludes body

Author: Steve Jiang
        Review: Bryan Call



git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@911672 13f79535-47bb-0310-9956-ffa450edef68